--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: chaos_engine
-description: "A new Flutter project."
+name: Life Engine
+description: "An entirely new life & relationship dashboard because I just get pissed off when I want a feature that doesn't exist."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
