--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: Life Engine
+name: Life_Engine
 description: "An entirely new life & relationship dashboard because I just get pissed off when I want a feature that doesn't exist."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -33,6 +33,7 @@ dependencies:
   shared_preferences: ^2.2.2
   firebase_core: ^2.30.0
   cloud_firestore: ^4.16.0
+  firebase_messaging: ^14.7.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
